fix datefield overflow issue on details tab

--- a/src/client/stylesheets/style.scss
+++ b/src/client/stylesheets/style.scss
@@ -792,6 +792,7 @@ $uf-primary:#EB743B;
 
 .accordion > .icon-card{
 	display: flex;
+	overflow: visible;
 	flex-direction: column-reverse;
 }
 
